// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extraction characterization > a source language reads its literals whole 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "octal",
      "value": 493,
    },
    {
      "notation": "decimal",
      "value": 1000000,
    },
    {
      "notation": "hex",
      "value": 255,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > mixed-array.toml as toml 1`] = `
{
  "errors": [
    {
      "filepath": "mixed-array.toml",
      "message": "Failed to parse TOML: Inline lists must be a single type, not a mix of integer and float at row 1, col 17, pos 16:
1> array = [1, 2.5, 3]
                   ^
2: 

",
      "type": "parse-error",
    },
  ],
  "numbers": [],
  "success": false,
}
`;

exports[`extraction characterization > multi-doc.yaml as yaml 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.csv as csv 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 19.99,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
    {
      "notation": "decimal",
      "value": -3.5,
    },
    {
      "notation": "decimal",
      "value": 3,
    },
    {
      "notation": "decimal",
      "value": 4,
    },
    {
      "notation": "decimal",
      "value": 42,
    },
    {
      "notation": "decimal",
      "value": 100,
    },
    {
      "notation": "decimal",
      "value": 0.5,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.csv via streaming parser 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 19.99,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
    {
      "notation": "decimal",
      "value": -3.5,
    },
    {
      "notation": "decimal",
      "value": 3,
    },
    {
      "notation": "decimal",
      "value": 4,
    },
    {
      "notation": "decimal",
      "value": 42,
    },
    {
      "notation": "decimal",
      "value": 100,
    },
    {
      "notation": "decimal",
      "value": 0.5,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.env as env 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 3000,
    },
    {
      "notation": "decimal",
      "value": 45.5,
    },
    {
      "notation": "decimal",
      "value": -7,
    },
    {
      "notation": "decimal",
      "value": 99,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.ini as ini 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 8080,
    },
    {
      "notation": "decimal",
      "value": 30.5,
    },
    {
      "notation": "decimal",
      "value": -42,
    },
    {
      "notation": "decimal",
      "value": 0.5,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.json as json 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 1250000,
    },
    {
      "notation": "decimal",
      "value": -340.5,
    },
    {
      "notation": "decimal",
      "value": 1500,
    },
    {
      "notation": "decimal",
      "value": 0,
    },
    {
      "notation": "decimal",
      "value": 9007199254740992,
    },
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 2.5,
    },
    {
      "notation": "decimal",
      "value": -3,
    },
    {
      "notation": "decimal",
      "value": 0.001,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.toml as toml 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 42,
    },
    {
      "notation": "decimal",
      "value": -3.14,
    },
    {
      "notation": "decimal",
      "value": 5000,
    },
    {
      "notation": "decimal",
      "value": 100,
    },
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
    {
      "notation": "decimal",
      "value": 3,
    },
    {
      "notation": "decimal",
      "value": 2.5,
    },
    {
      "notation": "decimal",
      "value": -0.5,
    },
    {
      "notation": "decimal",
      "value": 12345,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.yaml as yaml 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 42,
    },
    {
      "notation": "decimal",
      "value": -19.99,
    },
    {
      "notation": "decimal",
      "value": 6.02e+23,
    },
    {
      "notation": "decimal",
      "value": 26,
    },
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 2.5,
    },
    {
      "notation": "decimal",
      "value": 10,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numeric-header.csv as csv 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 2024,
    },
    {
      "notation": "decimal",
      "value": 7,
    },
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 19.99,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
    {
      "notation": "decimal",
      "value": -3.5,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > numeric-header.csv via streaming parser (agrees with sync) 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 2024,
    },
    {
      "notation": "decimal",
      "value": 7,
    },
    {
      "notation": "decimal",
      "value": 1,
    },
    {
      "notation": "decimal",
      "value": 19.99,
    },
    {
      "notation": "decimal",
      "value": 2,
    },
    {
      "notation": "decimal",
      "value": -3.5,
    },
  ],
  "success": true,
}
`;

exports[`extraction characterization > unknown file type falls back to regex scan 1`] = `
{
  "errors": [],
  "numbers": [
    {
      "notation": "decimal",
      "value": 123,
    },
    {
      "notation": "decimal",
      "value": 1.2,
    },
    {
      "notation": "decimal",
      "value": 0.3,
    },
    {
      "notation": "decimal",
      "value": -5,
    },
    {
      "notation": "decimal",
      "value": 3.14,
    },
    {
      "notation": "decimal",
      "value": 0.15,
    },
    {
      "notation": "decimal",
      "value": 12,
    },
    {
      "notation": "decimal",
      "value": 0,
    },
  ],
  "success": true,
}
`;
